--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -304,10 +304,9 @@
     .live-dot {
       width: 6px;
       height: 6px;
-      background-color: #10b981;
+      background-color: #ffffff;
       border-radius: 50%;
       display: inline-block;
-      animation: live-pulse 2s infinite ease-in-out;
     }
 
     @media (max-width: 768px) {
@@ -436,16 +435,16 @@
 <div class="live-event-card">
   <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px; background: #f8fafc;">
     <div style="display: flex; align-items: center; gap: 12px;">
-      <div style="background: #0c2340; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 8px;">
+      <div style="background: #94a3b8; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 8px;">
         <span class="live-dot"></span>
-        IN PROGRESS
+        FINISHED
       </div>
       <div>
         <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Compadres Collegiate (UTRGV)</h2>
         <div style="font-size: 12px; color: #7f8c8d; font-weight: 600;">Iberostar Playa Paraiso | Par 72/6,701 yards</div>
       </div>
     </div>
-    <div style="font-size: 11px; color: #95a5a6; font-weight: 600;">Updated: Feb 2, 2026</div>
+    <div style="font-size: 11px; color: #95a5a6; font-weight: 600;">Updated: Feb 3, 2026</div>
   </div>
 
   <div>
@@ -519,7 +518,7 @@
             <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 2, 2026</div>
             <div class="mobile-status-bar">
               <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">75</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">+2</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">+3</span></div>
               <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">T2</span></div>
             </div>
           </td>
@@ -541,18 +540,26 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
+              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r1-scorecard-70.jpeg')">
+                <span>Scorecard</span>
+                <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M15 3h6v6"></path>
+                  <path d="M10 14L21 3"></path>
+                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                </svg>
+              </div>
             </div>
             <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 3, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">71</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-1</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">T3</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #10b981; font-weight: 700;">IN PROGRESS</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+          <td class="hide-mobile under-par">71</td>
+          <td class="hide-mobile under-par">-1</td>
+          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">FINISHED</td>
+          <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">T3</td>
         </tr>
         
       </tbody>
@@ -583,7 +590,7 @@
 
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
 
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">145</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">216</span>
 
     </div>
 
@@ -591,15 +598,15 @@
 
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Cur. Par</span>
 
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">+1</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">E</span>
 
     </div>
 
     <div style="text-align: right;">
 
-      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Cur. Rank</span>
+      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Rank</span>
 
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">T2</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">T3</span>
 
     </div>
 
