--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
               </a>
             </object>
           </h3>
-          <p style="margin: 0; font-weight: 700; color: #c98a2e; font-size: 15px;">Spring Season</p>
+          <p style="margin: 0; font-weight: 700; color: #c98a2e; font-size: 15px;">presented by USAA</p>
           
           <div style="margin-top: 25px; padding-top: 20px; border-top: 1px dashed #eee; color: #444; font-size: 14px; line-height: 1.8;">
             <div style="margin-bottom: 12px; display: flex; align-items: center; gap: 8px;">
