--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
       <h2 style="font-size: 26px; color: #0c2340; margin: 0; font-weight: 800; letter-spacing: 1px; text-transform: uppercase;">Introduction</h2>
     </div>
 
-   <div style="text-align: justify; word-break: keep-all;">
+<div style="text-align: justify; word-break: keep-all;">
   <p style="font-size: 18px; margin-bottom: 20px; line-height: 1.8; color: #2d3748;">
     <span style="font-weight: 900; font-size: 22px; color: #0c2340; border-bottom: 3px solid #cbd5e0; padding-bottom: 2px;">Joshua Hong</span> (b. 2007) is a <b>Korean-Mexican</b> golfer competing for the <b>University of Texas at San Antonio (UTSA)</b> in <b>NCAA Division I</b>.
   </p>
@@ -769,14 +769,16 @@
 
   <div style="background: white; padding: 25px; border-radius: 15px; border-left: 5px solid #3182ce; margin-top: 25px; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
     <p style="font-size: 16.5px; line-height: 1.8; color: #2d3748; margin: 0;">
-      Across four Fall season events, Joshua recorded a 
-      <span style="color: #2b6cb0; font-weight: 800; font-size: 18px; background: rgba(43, 108, 176, 0.05); padding: 2px 6px; border-radius: 4px;">71.5 Adj. Scoring Average</span>. 
+      Through five events (four Fall, one Spring), Joshua recorded a 
+      <span style="color: #2b6cb0; font-weight: 800; font-size: 18px; background: rgba(43, 108, 176, 0.05); padding: 2px 6px; border-radius: 4px;">71.0 Adj. Scoring Average</span>. 
       Alongside an 
       <span style="color: #10b981; font-weight: 800; font-size: 18px; background: rgba(16, 185, 129, 0.05); padding: 2px 6px; border-radius: 4px;">Academic GPA of 3.4</span>, 
-      his profile reflects a steady, process-driven approach to long-term development as a student-athlete.
+      his profile reflects a steady, process-driven approach to student-athlete development.
     </p>
   </div>
 </div>
+
+    
     </div>
   </div>
 
