--- a/test-1.html
+++ b/test-1.html
@@ -274,8 +274,13 @@
 
 
 
-<div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; position: relative; width: 100%;">
   <style>
+    /* 모든 하위 요소의 크기 계산 방식 통일 (테두리 포함 900px 고정) */
+    .performance-log-section *, .performance-log-section *:before, .performance-log-section *:after {
+      box-sizing: border-box !important;
+    }
+
     /* 베너 바로 밑 토너먼트 스케줄 테이블 구조 최적화 */
     .log-table { width: 100%; border-collapse: collapse; background: white; table-layout: fixed; margin-bottom: 0; border: none; }
     .log-table th { background: #f8f9fa; font-size: 11px; color: #0c2340; text-transform: uppercase; padding: 12px 10px; border-bottom: 2px solid #0c2340; text-align: center; }
@@ -285,23 +290,22 @@
     .under-par { color: #e74c3c !important; font-weight: 800 !important; }
     .over-par { color: #2c3e50 !important; font-weight: 700 !important; }
     
-    /* 테두리 끊김 방지를 위해 overflow: hidden 재적용 및 스크롤 간섭 제거 */
+    /* 테두리 정렬 및 시각적 팽창 억제 */
     .live-event-card { 
       background: #ffffff; 
       border: 2px solid #0c2340; 
       border-radius: 20px; 
       padding: 0; 
-      box-shadow: 0 10px 30px rgba(12, 35, 64, 0.1); /* 그림자 범위를 살짝 좁혀 시각적 팽창 억제 */
+      box-shadow: 0 8px 25px rgba(12, 35, 64, 0.08); /* 그림자 팽창 최소화 */
       margin-bottom: 50px; 
       position: relative; 
       display: flex; 
       flex-direction: column;
-      overflow: hidden; /* 모서리 끊김 해결 */
-      box-sizing: border-box;
+      overflow: hidden; 
       width: 100%;
     }
 
-    /* 실시간 상태 표시 점 애니메이션 추가 */
+    /* 실시간 상태 표시 점 애니메이션 */
     @keyframes live-pulse {
       0% { opacity: 1; transform: scale(1); }
       50% { opacity: 0.4; transform: scale(0.9); }
@@ -316,9 +320,9 @@
     }
 
     @media (max-width: 768px) {
-      .performance-log-section { padding: 0 15px; } /* 모바일에서는 여백 필요 */
+      .performance-log-section { padding: 0 15px; } 
       .log-table thead { display: none; }
-      .log-table, .log-table tbody, .log-table tr, .log-table td { display: block; width: 100%; box-sizing: border-box; }
+      .log-table, .log-table tbody, .log-table tr, .log-table td { display: block; width: 100%; }
       .log-table tr { margin-bottom: 15px; border: 1px solid #eee !important; border-radius: 12px; padding: 12px; }
       .log-table td { border: none !important; padding: 0 !important; text-align: left !important; }
       .hide-mobile { display: none !important; }
@@ -339,17 +343,15 @@
     }
   </style>
 
-  
-  <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
+  <div style="width: 100%; border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
     <h1 style="margin: 0; color: #0c2340; font-size: 24px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
       Tournament Schedule & Scoring
     </h1>
   </div>
-    <div id="Tournament-Schedule-Scoring" style="padding-top: 20px;">
-    </div>
+
+  <div id="Tournament-Schedule-Scoring" style="padding-top: 20px;"></div>
 
 <style>
-  /* Pairing Modal 기본 스타일 */
   .pairing-modal {
     display: none;
     position: fixed;
@@ -395,7 +397,6 @@
     cursor: pointer;
     text-transform: uppercase;
   }
-  /* 라운드 페어링 버튼 공통 클래스 */
   .pairing-btn {
     cursor: pointer;
     display: flex;
@@ -432,11 +433,11 @@
   function openPairing(imgSrc) {
     document.getElementById('pairingImg').src = imgSrc;
     document.getElementById('pairingModal').style.display = 'flex';
-    document.body.style.overflow = 'hidden'; // 스크롤 방지
+    document.body.style.overflow = 'hidden'; 
   }
   function closePairing() {
     document.getElementById('pairingModal').style.display = 'none';
-    document.body.style.overflow = 'auto'; // 스크롤 재개
+    document.body.style.overflow = 'auto'; 
   }
 </script>
 
@@ -467,8 +468,7 @@
         </tr>
       </thead>
       <tbody>
-
-      <tr>
+        <tr>
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1</div>
@@ -501,8 +501,7 @@
           <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">FINISHED</td>
           <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">1</td>
         </tr>
-
-    <tr>
+        <tr>
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2</div>
@@ -514,7 +513,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-            <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r1-scorecard-70.jpeg')">
+              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r1-scorecard-70.jpeg')">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -535,7 +534,6 @@
           <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">FINISHED</td>
           <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">T2</td>
         </tr>
-
         <tr>
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
@@ -569,46 +567,33 @@
           <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">FINISHED</td>
           <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">T3</td>
         </tr>
-        
       </tbody>
     </table>
   </div>
 
- <div style="background: #0c2340; padding: 15px 25px; display: flex; justify-content: flex-end; align-items: center; gap: 30px;">
- <a href="https://scoreboard.clippd.com/tournaments/239018/scoring/team" target="_blank" style="margin-right: auto; display: flex; align-items: center; gap: 8px; color: #0c2340; text-decoration: none; font-size: 11px; font-weight: 900; letter-spacing: 0.8px; text-transform: uppercase; border: 1.5px solid #0c2340; padding: 5px 12px; border-radius: 6px; transition: all 0.2s ease; background: #ffffff;">
-  <span style="display: flex; align-items: center; gap: 6px;">
-    <span style="width: 5px; height: 5px; background-color: #bdc3c7; border-radius: 50%; display: inline-block;"></span>
-    FINAL RESULTS
-  </span>
-  <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#bdc3c7" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
-    <line x1="7" y1="17" x2="17" y2="7"></line>
-    <polyline points="7 7 17 7 17 17"></polyline>
-  </svg>
-</a>
-
-<style>
-@keyframes pulse {
-  0% { opacity: 1; transform: scale(1); }
-  50% { opacity: 0.4; transform: scale(1.2); }
-  100% { opacity: 1; transform: scale(1); }
-}
-</style>
-
-      <div style="text-align: right;">
+  <div style="background: #0c2340; padding: 15px 25px; display: flex; justify-content: flex-end; align-items: center; gap: 30px;">
+    <a href="https://scoreboard.clippd.com/tournaments/239018/scoring/team" target="_blank" style="margin-right: auto; display: flex; align-items: center; gap: 8px; color: #0c2340; text-decoration: none; font-size: 11px; font-weight: 900; letter-spacing: 0.8px; text-transform: uppercase; border: 1.5px solid #0c2340; padding: 5px 12px; border-radius: 6px; transition: all 0.2s ease; background: #ffffff;">
+      <span style="display: flex; align-items: center; gap: 6px;">
+        <span style="width: 5px; height: 5px; background-color: #bdc3c7; border-radius: 50%; display: inline-block;"></span>
+        FINAL RESULTS
+      </span>
+      <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#bdc3c7" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
+        <line x1="7" y1="17" x2="17" y2="7"></line>
+        <polyline points="7 7 17 7 17 17"></polyline>
+      </svg>
+    </a>
+    <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">216</span>
     </div>
-
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Par</span>
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">E</span>
     </div>
-
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Rank</span>
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">T3</span>
     </div>
-
   </div>
 </div>
 
